<resources>
    <string name="app_name">osds</string>

    <!--바텀네비게이션-->
    <string name="title_bottom_navigation_home">홈</string>
    <string name="title_bottom_navigation_search">검색</string>
    <string name="title_bottom_navigation_gift">선물 리스트</string>
    <string name="title_bottom_navigation_my">마이</string>

    <string name="title_gift_box">선물 장바구니</string>
    <string name="title_gift_ranking">선물 랭킹</string>
    <string name="title_category"> 카테고리 </string>
    <string name="title_cancel">취소</string>
    <string name="title_recently_keyword">최근 검색어</string>
    <string name="title_popular_keyword">인기 검색어</string>
    <string name="title_all_delete">모두 지우기</string>
    <string name="title_sought_after_gift">많이 찾는 선물</string>
    <string name="title_luxury">힘을 합치면 받을 수 있어!</string>
    <string name="title_do_funding">선물하기</string>
    <string name="title_funding_item">선물 항목</string>
    <string name="title_info_input">정보 입력</string>
    <string name="title_sender_name">보내는 분 이름</string>
    <string name="title_message">메시지</string>
    <string name="title_payment_type">결제 수단</string>
    <string name="title_gift_list">선물 리스트</string>
    <string name="title_gift_complete">선물완료</string>
    <string name="title_payment_info">결제 정보</string>
    <string name="title_input_info">입력 정보</string>
    <string name="title_funding_list">펀딩내역</string>
    <string name="title_payment_failure">결제 실패</string>
    <string name="title_setting_address">주소 설정</string>

    <string name="category_all">전체</string>
    <string name="category_one_to_two">1~2만원</string>
    <string name="category_three_to_four">3~4만원</string>
    <string name="category_five_to_nine">5~9만원</string>
    <string name="category_over_ten">10만원 이상</string>

    <string name="category_around_ten">10만원대</string>
    <string name="category_around_twenty">20만원대</string>
    <string name="category_over_thirty">30만원 이상</string>

    <string name="category_merchandise_info">상품 설명</string>
    <string name="category_detail_info">상세 정보</string>

    <string name="category_one_to_two_funding">1~2만원 펀딩</string>
    <string name="category_three_to_four_funding">3~4만원 펀딩</string>
    <string name="category_five_to_nine_funding">5~9만원 펀딩</string>
    <string name="category_over_ten_funding">10만원 이상 펀딩</string>

    <string name="category_sort_recommend">추천순</string>
    <string name="category_sort_popular">인기순</string>
    <string name="category_sort_funding">펀딩액순</string>
    <string name="category_sort_time">마감임박순</string>
    <string name="category_sort_new">최신순</string>
    <string name="category_sort_participate">응원참여자순</string>

    <string name="category_funding_price_all">잔액 전부</string>
    <string name="category_payment_card">신용카드 결제</string>
    <string name="category_payment_phone">휴대폰 결제</string>
    <string name="category_ten_thousand">10,000</string>
    <string name="category_five_thousand">5,000</string>
    <string name="category_direct_input">직접 입력</string>

    <string name="content_more_info">더보기</string>
    <string name="content_search"> 받고 싶은 선물을 찾아보세요!</string>
    <string name="content_merchandise_add">선물에 추가</string>
    <string name="content_do_merchandise_add">선물에 추가하기</string>
    <string name="content_essential">필수</string>
    <string name="content_optional">선택</string>
    <string name="content_funding_list">펀딩 내역</string>


    <string name="content_gift_together">함께 선물하기</string>
    <string name="content_possible_funding_price">펀딩 가능 금액</string>
    <string name="content_total">총</string>
    <string name="content_sender_hint">홍길동</string>
    <string name="content_gift_funding">의 선물 펀딩을</string>
    <string name="content_gift_funding_complete">완료하였습니다.</string>
    <string name="content_gift_history">선물 내역</string>
    <string name="content_confirm">확인</string>
    <string name="content_funding">펀딩</string>
    <string name="content_funding_failure">결제 실패하였습니다.</string>
    <string name="content_payment_check">결제 수단을 확인한 후, 재시도 요청드립니다.</string>
    <string name="content_retry">다시 선물하기</string>
    <string name="content_next">다음에 하기</string>

    <string name="content_login_tutorial">가입하여 선물 전달하기</string>
    <string name="content_login_description">선물을 펀딩으로 받아보세요!</string>

    <string name="content_empty_user_input_anniversary">기념일을 입력해주세요.</string>

    <!-- 배송지 입력화면 -->
    <string name="title_complete">완료</string>
    <string name="title_register_complete">등록 완료</string>
    <string name="title_search_guide">이렇게 검색해 보세요.</string>
    <string name="title_address_detail">주소 상세입력</string>
    <string name="title_address_search">주소 검색</string>
    <string name="content_address">펀딩 완료된 선물을\n어디로 배송해 드릴까요?</string>
    <string name="content_input">지번, 도로명, 건물명으로 검색</string>
    <string name="content_sample_road_name">도로명 + 건물번호</string>
    <string name="content_road_name_example">예) 강남대로 94길</string>
    <string name="content_sample_land_lot_number">지역명 + 번지</string>
    <string name="content_land_lot_number_example">예) 역삼동 111&#8211;1</string>
    <string name="content_building_name">건물명, 아파트명</string>
    <string name="content_building_name_example">예) 동신아파트</string>
    <string name="content_address_detail_hint">상세 주소를 입력해주세요. 예) A동 101호</string>
    <string name="content_no_address_result">검색 결과가 없습니다.\n도로명, 지번, 건물명으로\n재 검색해주세요.</string>
    <string name="content_empty_address">주소지를 입력해주세요.</string>
    <string name="content_road_name">도로명</string>
    <string name="content_address_name">지번</string>

    <!-- 선물담기 -->
    <string name="content_put_gift">선물 담기</string>
    <string name="category_luxury">명품 패션</string>
    <string name="category_beauty">뷰티</string>
    <string name="category_living">리빙/인테리어</string>
    <string name="category_fashion">패션</string>
    <string name="category_digital">디지털/가전</string>
    <string name="category_food">식품</string>
    <string name="category_gifticon">교환권</string>
    <string name="category_kitchen">주방</string>
    <string name="category_sport">스포츠</string>
    <string name="category_flower">꽃배달</string>
    <string name="category_baby">출산/유아</string>
    <string name="category_pet">반려동물</string>
    <string name="category_more_rank">랭킹 더보기</string>
    <string name="category_luxury_rank">명품 더보기</string>

    <string name="content_home_search_hint">찾으시는 선물을 검색해 보세요.</string>
    <string name="title_home_main_category">어떤 선물을 찾나요?</string>
    <string name="title_home_luxury_gift">힘을 합치면, 받을 수 있어!</string>
    <string name="title_home_most_searched_gift">많이 검색하는 선물</string>
    <string name="title_home_more_gift">선물로 담을만한 것이 뭐가 있더라?</string>
    <string name="title_home_most_selected_gift">고민될 땐, 남이 많이 담은 선물!</string>
    <string name="content_home_search_popup">찾으시는 선물이 있나요?</string>

    <!-- 기념일 선택 -->
    <string name="title_event_type">이벤트 종류</string>
    <string name="title_anniversary_question">질문 영역입니다.</string>

    <string name="content_month">월</string>
    <string name="content_day_of_month">일</string>
    <string name="content_next_step">다음</string>

    <string name="category_anniversary_wedding_type">wedding</string>
    <string name="category_anniversary_pregnancy_type">pregnancy</string>
    <string name="category_anniversary_housewarming_type">housewarming</string>
    <string name="category_anniversary_birthday_type">birthday</string>
    <string name="category_anniversary_birthday">&#127874; 생일</string>
    <string name="category_anniversary_pregnancy">&#129328; 임신 / 출산</string>
    <string name="category_anniversary_housewarming">&#127968; 이사 / 집들이</string>
    <string name="category_anniversary_wedding">&#128141; 결혼</string>
    <string name="category_anniversary_user_input">&#x270F;&#xFE0F; 직접 입력</string>

    <!-- 선물 검색 -->
    <string name="title_search">검색</string>
    <!-- 회사정보 -->
    <string name="title_company_name">오손도손</string>
    <string name="title_company_Info">이운기 | 95641234 \n 22 \n 경기 용인시 기흥구 신갈로 96번길 11-54 \n mynamewoon@gmail.com | 010-8631-0498</string>


</resources>