<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/solitude2">

    <TextView
        android:id="@+id/tv_guide_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:text="@string/title_search_guide"
        android:textColor="@color/midnight_express"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_road_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/content_road_name"
        android:textColor="@color/raven"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tv_guide_title"
        app:layout_constraintTop_toBottomOf="@id/tv_guide_title" />

    <TextView
        android:id="@+id/tv_road_name_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="1dp"
        android:text="@string/content_road_name_example"
        android:textColor="@color/link_water"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_road_name" />

    <TextView
        android:id="@+id/tv_land_lot_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/content_land_lot_number"
        android:textColor="@color/raven"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tv_road_name"
        app:layout_constraintTop_toBottomOf="@id/tv_road_name_example" />

    <TextView
        android:id="@+id/tv_land_lot_number_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="1dp"
        android:text="@string/content_land_lot_number_example"
        android:textColor="@color/link_water"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_land_lot_number" />

    <TextView
        android:id="@+id/tv_building_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/content_building_name"
        android:textColor="@color/raven"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tv_road_name"
        app:layout_constraintTop_toBottomOf="@id/tv_land_lot_number_example" />

    <TextView
        android:id="@+id/tv_building_name_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="1dp"
        android:text="@string/content_building_name_example"
        android:textColor="@color/link_water"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_building_name" />

</androidx.constraintlayout.widget.ConstraintLayout>