<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RadioGroup
        android:id="@+id/rg_all_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_dimens"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/r_btn_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_sc_oval_tranparent_tomato_radius_999_stroke_0_oval_hawkes_blue_tranparent_radius_999_stroke0"
            android:button="@null"
            android:checked="true"
            android:fontFamily="@font/pretendard_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:minHeight="0dp"
            android:paddingHorizontal="15dp"
            android:paddingVertical="9dp"
            android:text="@string/category_all"
            android:textColor="@drawable/sc_color_solitude_2_color_raven"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/r_btn_beauty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:background="@drawable/bg_sc_oval_tranparent_tomato_radius_999_stroke_0_oval_hawkes_blue_tranparent_radius_999_stroke0"
            android:button="@null"
            android:fontFamily="@font/pretendard_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:minHeight="0dp"
            android:paddingHorizontal="15dp"
            android:paddingVertical="9dp"
            android:textColor="@drawable/sc_color_solitude_2_color_raven"
            android:textSize="14sp"
            android:text="@string/category_beauty"/>


        <RadioButton
            android:id="@+id/r_btn_living"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:background="@drawable/bg_sc_oval_tranparent_tomato_radius_999_stroke_0_oval_hawkes_blue_tranparent_radius_999_stroke0"
            android:button="@null"
            android:fontFamily="@font/pretendard_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:minHeight="0dp"
            android:paddingHorizontal="15dp"
            android:paddingVertical="9dp"
            android:textColor="@drawable/sc_color_solitude_2_color_raven"
            android:textSize="14sp"
            android:text="@string/category_living" />

        <RadioButton
            android:id="@+id/r_btn_fashion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:background="@drawable/bg_sc_oval_tranparent_tomato_radius_999_stroke_0_oval_hawkes_blue_tranparent_radius_999_stroke0"
            android:button="@null"
            android:fontFamily="@font/pretendard_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:minHeight="0dp"
            android:paddingHorizontal="15dp"
            android:paddingVertical="9dp"
            android:textColor="@drawable/sc_color_solitude_2_color_raven"
            android:textSize="14sp"
            android:text="@string/category_fashion" />

        <RadioButton
            android:id="@+id/r_btn_digital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:background="@drawable/bg_sc_oval_tranparent_tomato_radius_999_stroke_0_oval_hawkes_blue_tranparent_radius_999_stroke0"
            android:button="@null"
            android:fontFamily="@font/pretendard_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:minHeight="0dp"
            android:paddingHorizontal="15dp"
            android:paddingVertical="9dp"
            android:textColor="@drawable/sc_color_solitude_2_color_raven"
            android:textSize="14sp"
            android:text="@string/category_digital" />


        <RadioButton
            android:id="@+id/r_btn_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:background="@drawable/bg_sc_oval_tranparent_tomato_radius_999_stroke_0_oval_hawkes_blue_tranparent_radius_999_stroke0"
            android:button="@null"
            android:fontFamily="@font/pretendard_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:minHeight="0dp"
            android:paddingHorizontal="15dp"
            android:paddingVertical="9dp"
            android:textColor="@drawable/sc_color_solitude_2_color_raven"
            android:textSize="14sp"
            android:text="@string/category_food" />

        <RadioButton
            android:id="@+id/r_btn_gifticon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:background="@drawable/bg_sc_oval_tranparent_tomato_radius_999_stroke_0_oval_hawkes_blue_tranparent_radius_999_stroke0"
            android:button="@null"
            android:fontFamily="@font/pretendard_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:minHeight="0dp"
            android:paddingHorizontal="15dp"
            android:paddingVertical="9dp"
            android:textColor="@drawable/sc_color_solitude_2_color_raven"
            android:textSize="14sp"
            android:text="@string/category_gifticon" />

        <RadioButton
            android:id="@+id/r_btn_kitchen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:background="@drawable/bg_sc_oval_tranparent_tomato_radius_999_stroke_0_oval_hawkes_blue_tranparent_radius_999_stroke0"
            android:button="@null"
            android:fontFamily="@font/pretendard_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:minHeight="0dp"
            android:paddingHorizontal="15dp"
            android:paddingVertical="9dp"
            android:textColor="@drawable/sc_color_solitude_2_color_raven"
            android:textSize="14sp"
            android:text="@string/category_kitchen" />

        <RadioButton
            android:id="@+id/r_btn_sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:background="@drawable/bg_sc_oval_tranparent_tomato_radius_999_stroke_0_oval_hawkes_blue_tranparent_radius_999_stroke0"
            android:button="@null"
            android:fontFamily="@font/pretendard_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:minHeight="0dp"
            android:paddingHorizontal="15dp"
            android:paddingVertical="9dp"
            android:textColor="@drawable/sc_color_solitude_2_color_raven"
            android:textSize="14sp"
            android:text="@string/category_sport" />

        <RadioButton
            android:id="@+id/r_btn_flower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:background="@drawable/bg_sc_oval_tranparent_tomato_radius_999_stroke_0_oval_hawkes_blue_tranparent_radius_999_stroke0"
            android:button="@null"
            android:fontFamily="@font/pretendard_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:minHeight="0dp"
            android:paddingHorizontal="15dp"
            android:paddingVertical="9dp"
            android:textColor="@drawable/sc_color_solitude_2_color_raven"
            android:textSize="14sp"
            android:text="@string/category_flower" />

        <RadioButton
            android:id="@+id/r_btn_baby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:background="@drawable/bg_sc_oval_tranparent_tomato_radius_999_stroke_0_oval_hawkes_blue_tranparent_radius_999_stroke0"
            android:button="@null"
            android:fontFamily="@font/pretendard_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:minHeight="0dp"
            android:paddingHorizontal="15dp"
            android:paddingVertical="9dp"
            android:textColor="@drawable/sc_color_solitude_2_color_raven"
            android:textSize="14sp"
            android:text="@string/category_baby" />

        <RadioButton
            android:id="@+id/r_btn_pet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:background="@drawable/bg_sc_oval_tranparent_tomato_radius_999_stroke_0_oval_hawkes_blue_tranparent_radius_999_stroke0"
            android:button="@null"
            android:fontFamily="@font/pretendard_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:minHeight="0dp"
            android:paddingHorizontal="15dp"
            android:paddingVertical="9dp"
            android:textColor="@drawable/sc_color_solitude_2_color_raven"
            android:textSize="14sp"
            android:text="@string/category_pet" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>