<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.address.AddressActivity">

        <ImageView
            android:id="@+id/iv_punding_complete_gift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="34dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_address_content"
            style="@style/noto_sans_kr_medium_20_black_padding0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:layout_marginTop="14dp"
            android:text="@string/content_address"
            app:layout_constraintStart_toStartOf="@+id/iv_punding_complete_gift"
            app:layout_constraintTop_toBottomOf="@+id/iv_punding_complete_gift" />

        <TextView
            android:id="@+id/btn_address_search"
            style="@style/noto_sans_kr_medium_16_link_water_padding0"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginTop="34dp"
            android:layout_marginEnd="28dp"
            android:background="@drawable/bg_rect_link_water_white_round10_stroke1"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:paddingStart="18dp"
            android:text="@string/content_input"
            app:drawableStartCompat="@drawable/ic_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_address_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_address_content"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/btn_next_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="62dp"
            android:gravity="center"
            android:text="@string/content_next"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>